deploy/06-genieacs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genieacs
  namespace: genieacs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genieacs
  template:
    metadata:
      labels:
        app: genieacs
    spec:
      containers:
      - name: genieacs
        image: miravallesg/genieacs:1.2.9
        ports:
        - containerPort: 7547
        - containerPort: 7557
        - containerPort: 7567
        - containerPort: 3000
