deploy/05-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: genieacs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: init-script
          configMap:
            name: mongo-init-script

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: genieacs
spec:
  ports:
    - port: 27017
  selector:
    app: mongo
